--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -10,6 +10,10 @@
         app:showAsAction="always" />
 
     <item
-        android:id="@+id/category_item"
+        android:id="@+id/events_item"
+        android:title="Eventos" />
+
+    <item
+        android:id="@+id/categories_item"
         android:title="Categorias" />
 </menu>
