--- a/app/src/main/res/menu/event_menu.xml
+++ b/app/src/main/res/menu/event_menu.xml
@@ -3,6 +3,6 @@
     xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
-        android:id="@+id/new_event"
-        android:title="Criar evento" />
+        android:id="@+id/back_to_event"
+        android:title="Voltar" />
 </menu>
