--- a/app/src/main/res/menu/reservation_menu.xml
+++ b/app/src/main/res/menu/reservation_menu.xml
@@ -7,6 +7,6 @@
         android:title="Voltar" />
 
     <item
-        android:id="@+id/reservations"
-        android:title="Reservas" />
+        android:id="@+id/new_reservation"
+        android:title="Criar reserva" />
 </menu>
