--- a/app/src/main/res/layout/reservation_item.xml
+++ b/app/src/main/res/layout/reservation_item.xml
@@ -35,6 +35,7 @@
     </LinearLayout>
 
     <LinearLayout
+        android:id="@+id/linearLayout3"
         android:layout_width="391dp"
         android:layout_height="39dp"
         android:orientation="horizontal"
@@ -56,6 +57,33 @@
         <TextView
             android:id="@+id/participantsCountView"
             android:layout_width="257dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:textSize="20sp" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="391dp"
+        android:layout_height="45dp"
+        android:orientation="horizontal"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="@+id/linearLayout2"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout3"
+        app:layout_constraintVertical_bias="0.0">
+
+        <TextView
+            android:id="@+id/textView"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:text="Evento:"
+            android:textSize="20sp" />
+
+        <TextView
+            android:id="@+id/eventNameView"
+            android:layout_width="308dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:textSize="20sp" />
